--- a/starter-code/public/stylesheets/style.css
+++ b/starter-code/public/stylesheets/style.css
@@ -34,3 +34,25 @@ a {
  #btn-search {
   height: 32px !important;
 }
+
+.table{
+  margin: 0 auto !important;
+}
+
+/* Sortable tables */
+table.sortable thead {
+  background-color:#eee;
+  color:#666666;
+  font-weight: bold;
+  cursor: default;
+}
+
+.box-shadow--6dp {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2)
+}
+
+icon-div{
+  margin: auto !important;
+  width: 50%; 
+  height: 20%
+}
