--- a/starter-code/views/layouts/main-layout.ejs
+++ b/starter-code/views/layouts/main-layout.ejs
@@ -10,6 +10,8 @@
     <title>My First Website</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css" />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    
   
   </head>
     <nav class="navbar mb-4 navbar-expand-lg navbar-dark bg-primary">
@@ -65,6 +67,7 @@
       </div>
     </nav>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    
     <body>
     <%- body -%> <!-- <=== note this line -->
   </body>
