--- a/starter-code/views/private/new.ejs
+++ b/starter-code/views/private/new.ejs
@@ -5,6 +5,7 @@
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="../js/js.js"></script>
     
+    
   </head>
 
   <body>
@@ -28,6 +29,11 @@
             </div>
 
             <div class="form-group col-centered row">
+                    <label class="control-label text-center" for="readOnlyInput">Language:</label>    
+                    <input type="text" class="form-control" placeholder="Enter language" name="language">
+                </div>
+
+            <div class="form-group col-centered row">
                     <label class="control-label text-center" for="readOnlyInput">Phone:</label>    
                     <input type="tel" class="form-control" placeholder="Enter Business Phone Number" id="phone" name="phone">
                 </div>
@@ -42,7 +48,7 @@
 
                     <div class="form-group row" id="locationField">
                             <label class="control-label text-center" for="readOnlyInput">Full Address:</label>    
-                            <input class="form-control" id="autocomplete" placeholder="Start typing the address" onfocus="geolocate()" type="text"></input>
+                            <input class="form-control" name="full_address" id="autocomplete" placeholder="Start typing the address" onfocus="geolocate()" type="text"></input>
                     </div>
 
                 <div class="form-group pt-4 row justify-content-between">    
@@ -147,7 +153,7 @@
 
             <div class="form-group row pt-3">
                 <label for="exampleTextarea">Business Description</label>
-                <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                <textarea class="form-control" name="description" id="exampleTextarea" rows="3"></textarea>
             </div>
             
                 <div class="row float-right">
@@ -161,4 +167,5 @@
     
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBibBok7MtTB_QmkFrwJ8zN1LrYdBRCN8w&libraries=places&callback=initAutocomplete"
         async defer></script>
+
   </body>
