--- a/starter-code/public/stylesheets/style.css
+++ b/starter-code/public/stylesheets/style.css
@@ -56,3 +56,32 @@ icon-div{
   width: 50%; 
   height: 20%
 }
+
+.well-searchbox {
+  min-height: 20px;
+  min-width: 400px;
+  padding: 19px;
+  position: absolute;
+
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto;
+ 
+  width: 100px; /* Need a specific value to work */
+
+
+  z-index: 80;
+  top: 35%;
+  /* right: 100px; */
+  background: rgba(0, 0, 0, 0.6);
+  /* margin-bottom: 20px; */
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.well-searchbox label {
+    color: #fff;
+}
