Add marker labels

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -86,12 +86,15 @@ icon-div{
     color: #fff;
 }
 
-
-
 .search input { text-indent: 30px;}
 .search .fa-search { 
   position: absolute;
   top: 30%;
   left: 7px;
   font-size: 4rem;
+}
+
+.img-fluid{
+  max-width: 15% !important;
+  height: auto !important;
 }
