--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -15,29 +15,38 @@
     
   
   </head>
-    <nav class="navbar mb-4 navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar mb-4 navbar-expand-lg navbar-dark bg-primary text-center">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item"ç>
+          
+          <li class="nav-item">
               <a class="nav-link" href="/">Map</a>
           </li>
           <li class="nav-item"ç>
               <a class="nav-link" href="/list">List</a>
             </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
-          </li>
+          </li> -->
           <li class="nav-item">
               <a class="nav-link" href="/new">Add Business</a>
             </li>
+
+            <!-- <li class="nav-item active">
+              <a href="/"> <img  class="img-fluid" src="/img/logo.png" alt=""></a>  
+           </li> -->
+
         </ul>
+        <div class="text-center">
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0 mr-4 pt-2 pb-1" type="submit">Search</button>
+          </form>
+      </div>
         
         <%if(!userSignedIn){%>
         <div class="text-right">
