Ready for presentation

--- a/views/private/edit2.ejs
+++ b/views/private/edit2.ejs
@@ -43,7 +43,7 @@
     
                 <div class="form-group col-centered row">
                         <label class="control-label text-center" for="readOnlyInput">Website:</label>    
-                        <input type="string" class="form-control" value="<%business.website%>" id="website" name="website">
+                        <input type="string" class="form-control" value="<%=business.website%>" id="website" name="website">
                     </div>
                 
                 <a id="btn-address" class="btn btn-secondary bg-dark col-12 text-center mb-3" >Address</a>
@@ -56,8 +56,8 @@
     
                     <div class="form-group pt-4 row justify-content-between">    
                             <label class="control-label align-self-center ">Street address</label>
-                            <input class="form-control col-2" value="<%business.street_num%>" id="street_number" name="street_num"></input>
-                            <input class="form-control col-7" value="<%business.street_name%>" id="route" name="street_name"></input>
+                            <input class="form-control col-2" value="<%=business.address.street_num%>" id="street_number" name="street_num"></input>
+                            <input class="form-control col-7" value="<%=business.address.street_name%>" id="route" name="street_name"></input>
                     </div>
                     <div class="form-group row">
                         <label class="control-label">City</label>
@@ -65,7 +65,7 @@
                             You may need to adjust it for the locations relevant to your app. See
                             https://developers.google.com/maps/documentation/javascript/examples/places-autocomplete-addressform
                         -->
-                        <input class="form-control text-center" value="<%business.city%>" id="locality" disabled="true" name="city"></input>
+                        <input class="form-control text-center" value="<%=business.city%>" id="locality" disabled="true" name="city"></input>
                         
                     </div>
                     <div class="form-group row justify-content-around text-center">
@@ -75,8 +75,8 @@
                     </div>
     
                     <div class="form-group row justify-content-around ">
-                        <input class="form-control col-lg-3 text-center" value="<%business.state%>" id="administrative_area_level_1" disabled="true" name=state""></input>
-                        <input class="form-control col-lg-3 offset-1 text-center" value="<%business.zip%>" id="postal_code" disabled="true" name="zip"></input>
+                        <input class="form-control col-lg-3 text-center" value="<%=business.address.state%>" id="administrative_area_level_1" name=state""></input>
+                        <input class="form-control col-lg-3 offset-1 text-center" value="<%=business.address.zip%>" id="postal_code"  name="zip"></input>
                         <input class="form-control field offset-1 col-lg-3 text-center" id="country" disabled="true"></input>
                     </div> 
                 </div>   
@@ -88,7 +88,7 @@
                             <input class="form-control text-center col-4" value="<%business.hours.mon.open%>" type="time" name="open"></input>
                             <input class="form-control text-center col-4" value="<%business.hours.mon.close%>" type="time" name="close"></input>
                             <div class="custom-control custom-checkbox justify-content-between col-2 offset-1">
-                                    <input type="checkbox" class="custom-control-input" name="isClosed" value="<%business.hours.mon.isClosed%>" id="customCheck1" >
+                                    <input type="checkbox" class="custom-control-input" name="isClosed" value="<=%business.hours.mon.isClosed%>" id="customCheck1" >
                                     <label class="custom-control-label" for="customCheck1">Closed</label>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                                 <input class="form-control text-center col-4" value="<%business.hours.tue.open%>" type="time" ></input>
                                 <input class="form-control text-center col-4" value="<%business.hours.tue.close%>" type="time" ></input>
                                 <div class="custom-control custom-checkbox justify-content-between col-2 offset-1">
-                                        <input type="checkbox" class="custom-control-input" value="<%business.hours.tue.isClosed%>" id="customCheck2">
+                                        <input type="checkbox" class="custom-control-input" value="<%=business.hours.tue.isClosed%>" id="customCheck2">
                                         <label class="custom-control-label" for="customCheck2">Closed</label>
                                 </div>
                             </div>
@@ -156,13 +156,19 @@
     
                 <div class="form-group row pt-3">
                     <label for="exampleTextarea">Business Description</label>
-                    <textarea class="form-control" value="<%business.description%>" name="description" id="exampleTextarea" rows="3"></textarea>
+                    <textarea class="form-control" value="<%=business.description%>" name="description" id="exampleTextarea" rows="4"><%=business.description%></textarea>
                 </div>
                 
                     <div class="row float-right">
                         <button class="btn btn-primary">Save Changes</button>
                     </div>
                 </form>
+                    <form action="/list">
+                        <div class="row float-left">
+                            <button type="submit" class="btn btn-outline-secondary">Cancel Changes</button>
+                        </div>
+                    </form>
+                
         </div>
                
                
