--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -2,12 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <%if(userSignedIn){%>
-      <title>In</title>
-    <%}else {%>
-      <title>Out</title>
-    <%}%>
-    <title>My First Website</title>
+    
+    <title>Lelp</title>
     
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css" />
