Update google api key

--- a/views/private/new.ejs
+++ b/views/private/new.ejs
@@ -171,7 +171,7 @@
            
            
     
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBibBok7MtTB_QmkFrwJ8zN1LrYdBRCN8w&libraries=places&callback=initAutocomplete"
+<script src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_API%>&libraries=places&callback=initAutocomplete"
         async defer></script>
 
   </body>
