--- a/views/private/edit2.ejs
+++ b/views/private/edit2.ejs
@@ -172,6 +172,6 @@
         </div>
                
                
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBibBok7MtTB_QmkFrwJ8zN1LrYdBRCN8w&libraries=places&callback=initAutocomplete"
+        <script src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_API%>&libraries=places&callback=initAutocomplete"
             async defer></script>
 </body>
